armo el menu nav

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,31 @@
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
-    <h1 class="text-4xl font-bold">Hello world!</h1>
+    <header id="header" class="h-24 bg-blue-900 text-white font-sans">
+      <div class="container mx-auto flex flex-row">
+        <div id="logo" class="flex-1">
+          <h3>TAILWIND</h3>
+        </div>
+        <nav class="flex-1">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">About Me</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">News</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
