--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,18 @@
   </head>
   <body>
     <header id="header" class="h-24 bg-blue-900 text-white bebas">
-      <div class="container mx-auto flex flex-row">
+      <div class="container w-11/12 mx-auto flex flex-row">
         <div id="logo" class="flex-1">
           <div
             class="w-64 pt-0.5 pb-0.5 mt-4 ml-6 bg-gray-400 text-center tracking-wider cursor-pointer overflow-hidden transition duration-300 rounded-sm bg-azul-claro hover:text-black hover:bg-gray-200"
           >
-            <span class="symbol block float-left text-3xl mt-1 ml-11"> S </span>
+            <span
+              class="symbol block float-left text-3xl mt-1 ml-11 animate-spin-low group-hover:animate-none group-hover:animate-from-bellow"
+            >
+              S
+            </span>
             <h3
-              class="block float-right text-4xl mt-1.5 mr-16 transition duration-100"
+              class="block float-right text-4xl mt-1.5 mr-16 transition duration-100 group-hover:animate-from-right"
             >
               TAILWIND
             </h3>
